--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,7 +118,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.181.105;
+allow 1.170.236.4;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -133,6 +133,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 13.126.29.181;
+allow 134.209.204.106;
 allow 135.125.239.70;
 allow 136.175.8.45;
 allow 136.244.111.163;
@@ -226,7 +227,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.151.138;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -254,6 +254,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.55.70.86;
 allow 180.150.226.99;
 allow 184.75.221.43;
 allow 185.100.85.132;
@@ -902,6 +903,7 @@ allow 204.8.96.86;
 allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
+allow 205.185.113.180;
 allow 205.185.113.8;
 allow 205.185.116.215;
 allow 205.185.116.34;
@@ -914,7 +916,6 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
 allow 207.32.218.41;
-allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.34.15;
@@ -945,6 +946,7 @@ allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -952,6 +954,7 @@ allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1013,13 +1016,14 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:f9f3:0:2::319;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
@@ -1038,6 +1042,7 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
+allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:c26:5163:253e:1ef6:d887;
@@ -1282,6 +1287,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1524,9 +1530,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1727,8 +1731,6 @@ allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.216;
-allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1837,6 +1839,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1976,8 +1979,6 @@ allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.202.5.104;
 allow 91.202.5.155;
-allow 91.203.144.194;
-allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.75.153;
 allow 91.208.75.156;
