--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -118,7 +118,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.181.105;
+set_real_ip_from 1.170.236.4;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -133,6 +133,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.126.29.181;
+set_real_ip_from 134.209.204.106;
 set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
@@ -226,7 +227,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.151.138;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -254,6 +254,7 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
+set_real_ip_from 179.55.70.86;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.75.221.43;
 set_real_ip_from 185.100.85.132;
@@ -902,6 +903,7 @@ set_real_ip_from 204.8.96.86;
 set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
+set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
@@ -914,7 +916,6 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
 set_real_ip_from 207.32.218.41;
-set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -945,6 +946,7 @@ set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
@@ -952,6 +954,7 @@ set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -1013,13 +1016,14 @@ set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
-set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:310:1::c;
@@ -1038,6 +1042,7 @@ set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
+set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
@@ -1282,6 +1287,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1524,9 +1530,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
-set_real_ip_from 2a0d:8140:1fff:62f9::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1727,8 +1731,6 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
-set_real_ip_from 45.137.99.216;
-set_real_ip_from 45.137.99.98;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.164;
@@ -1837,6 +1839,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1976,8 +1979,6 @@ set_real_ip_from 89.58.41.156;
 set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.202.5.155;
-set_real_ip_from 91.203.144.194;
-set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
