--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,6 +101,7 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.172.84.107;
 allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -170,7 +171,6 @@ allow 156.229.226.6;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
-allow 161.35.47.79;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -277,7 +277,6 @@ allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
-allow 185.126.115.146;
 allow 185.129.61.129;
 allow 185.129.62.62;
 allow 185.129.62.63;
@@ -540,6 +539,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -946,7 +946,6 @@ allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -954,7 +953,6 @@ allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.155.8.104;
-allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1021,9 +1019,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
@@ -1267,6 +1263,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1530,6 +1527,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1709,6 +1707,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1719,7 +1718,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1731,6 +1729,7 @@ allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
