--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -9,6 +9,7 @@ deny 102.211.56.250;
 deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.146.203.11;
+deny 103.163.218.11;
 deny 103.164.54.199;
 deny 103.193.179.233;
 deny 103.196.37.111;
@@ -101,6 +102,7 @@ deny 108.59.12.3;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
+deny 109.172.84.107;
 deny 109.228.160.190;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -118,7 +120,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.8.29;
+deny 1.170.194.182;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -216,7 +218,6 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
 deny 176.118.193.33;
-deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.148.3;
@@ -522,7 +523,6 @@ deny 185.38.175.133;
 deny 185.39.207.83;
 deny 185.40.4.100;
 deny 185.40.4.101;
-deny 185.40.4.121;
 deny 185.40.4.132;
 deny 185.40.4.149;
 deny 185.40.4.150;
@@ -1024,6 +1024,7 @@ deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
+deny 2604:4300:a:224:216:3cff:fe31:d55f;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1588,54 +1589,7 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:10::19eb:717b;
-deny 2a10:1fc0:10::28fc:90d4;
-deny 2a10:1fc0:10::2a17:5b54;
-deny 2a10:1fc0:10::2cf4:6ba2;
-deny 2a10:1fc0:10::2d91:1a2d;
-deny 2a10:1fc0:10::3903:457;
-deny 2a10:1fc0:10::3919:de17;
-deny 2a10:1fc0:10::3a1:5e9f;
-deny 2a10:1fc0:10::3dc5:e694;
-deny 2a10:1fc0:10::3eb3:d1d0;
-deny 2a10:1fc0:10::3ec1:2b1e;
-deny 2a10:1fc0:10::40d8:83c;
-deny 2a10:1fc0:10::42d2:f78b;
 deny 2a10:1fc0:10::5138:4dfa;
-deny 2a10:1fc0:10::5719:261d;
-deny 2a10:1fc0:10::61d9:7617;
-deny 2a10:1fc0:10::61e2:c84d;
-deny 2a10:1fc0:10::627f:3c31;
-deny 2a10:1fc0:10::694a:c359;
-deny 2a10:1fc0:10::6b4c:30fc;
-deny 2a10:1fc0:10::6c2e:469a;
-deny 2a10:1fc0:10::6d92:d6ab;
-deny 2a10:1fc0:10::6fde:4b8d;
-deny 2a10:1fc0:10::792f:38b4;
-deny 2a10:1fc0:10::895d:abf9;
-deny 2a10:1fc0:10::8a03:d023;
-deny 2a10:1fc0:10::8b78:d42e;
-deny 2a10:1fc0:10::8d4d:eca2;
-deny 2a10:1fc0:10::9a73:d4f2;
-deny 2a10:1fc0:10::9d80:c9f7;
-deny 2a10:1fc0:10::9e08:e765;
-deny 2a10:1fc0:10::a3a5:49da;
-deny 2a10:1fc0:10::a458:8b37;
-deny 2a10:1fc0:10::a63c:724c;
-deny 2a10:1fc0:10::b571:1205;
-deny 2a10:1fc0:10::bf3f:d195;
-deny 2a10:1fc0:10::c129:61a1;
-deny 2a10:1fc0:10::c385:c7fa;
-deny 2a10:1fc0:10::c7c7:2f84;
-deny 2a10:1fc0:10::d5a6:a292;
-deny 2a10:1fc0:10::d5d0:db30;
-deny 2a10:1fc0:10::d6b7:b3e9;
-deny 2a10:1fc0:10::dbe0:6173;
-deny 2a10:1fc0:10::dbe9:7852;
-deny 2a10:1fc0:10::e4c8:9020;
-deny 2a10:1fc0:10::ea87:5496;
-deny 2a10:1fc0:10::fa6c:cac5;
-deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1817,7 +1771,6 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.249.49.183;
 deny 46.30.188.218;
 deny 47.254.142.180;
 deny 47.89.193.230;
@@ -1888,6 +1841,7 @@ deny 66.78.40.73;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 72.14.179.10;
+deny 72.18.215.82;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
@@ -1921,30 +1875,7 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
-deny 85.239.55.11;
-deny 85.239.55.110;
-deny 85.239.55.112;
-deny 85.239.55.114;
-deny 85.239.55.123;
-deny 85.239.55.132;
-deny 85.239.55.168;
-deny 85.239.55.173;
-deny 85.239.55.174;
-deny 85.239.55.184;
-deny 85.239.55.189;
 deny 85.239.55.192;
-deny 85.239.55.201;
-deny 85.239.55.228;
-deny 85.239.55.230;
-deny 85.239.55.239;
-deny 85.239.55.24;
-deny 85.239.55.249;
-deny 85.239.55.25;
-deny 85.239.55.250;
-deny 85.239.55.31;
-deny 85.239.55.37;
-deny 85.239.55.51;
-deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1971,6 +1902,8 @@ deny 89.58.41.156;
 deny 91.132.144.59;
 deny 91.202.5.104;
 deny 91.202.5.155;
+deny 91.203.144.194;
+deny 91.203.145.116;
 deny 91.206.26.26;
 deny 91.208.75.153;
 deny 91.208.75.156;
@@ -1982,30 +1915,6 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.227.114.153;
-deny 91.227.77.107;
-deny 91.227.77.108;
-deny 91.227.77.119;
-deny 91.227.77.125;
-deny 91.227.77.139;
-deny 91.227.77.158;
-deny 91.227.77.160;
-deny 91.227.77.181;
-deny 91.227.77.193;
-deny 91.227.77.200;
-deny 91.227.77.208;
-deny 91.227.77.209;
-deny 91.227.77.226;
-deny 91.227.77.229;
-deny 91.227.77.237;
-deny 91.227.77.25;
-deny 91.227.77.31;
-deny 91.227.77.36;
-deny 91.227.77.44;
-deny 91.227.77.48;
-deny 91.227.77.51;
-deny 91.227.77.54;
-deny 91.227.77.62;
-deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
