--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -100,6 +100,7 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.172.84.107;
 set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -115,9 +116,10 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
+set_real_ip_from 111.243.176.147;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.170.194.182;
+set_real_ip_from 1.168.187.209;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -789,6 +791,7 @@ set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
+set_real_ip_from 2001:b011:6c0a:31c9:be24:11ff:fec9:c813;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
@@ -1280,7 +1283,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1781,7 +1783,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
